feat: private 미디어 업로드와 HEIC 정규화 기반 구축 (#12)
* feat: private 미디어 업로드와 HEIC 정규화 기반 구축

- Flyway V5 media_assets와 backend 전용 private master storage 구축
- JPEG·PNG passthrough 및 HEIC·HEIF sRGB JPEG 정규화 구현
- 관리자 session·CSRF API와 PostgreSQL·ARM64 Compose 계약 검증 보강
- 이미지 파이프라인·보안·라이선스·rollback 문서 동기화

* fix: HEIC still과 sequence brand 분류 보정

- HEIC still·sequence·AVIF brand taxonomy 분리
- heim·heis decoder 오류와 sequence 422 계약 테스트 보강
- 미디어 API·이미지 파이프라인·검증 문서 동기화

* fix: compatible brand 기반 HEIC subtype 판정 보강

- major·compatible HEIC still brand 판정과 sequence·AVIF 우선순위 보강
- valid synthetic HEIC HTTP 회귀와 generic HEIF fixture taxonomy 교정
- 미디어 API·이미지 파이프라인·테스트 전략 문서 동기화